# cr_trichome

./: Cargo.toml  README.md  cr_trichome.pyi  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  sphinx_doc.yml
cr_trichome/: cr_trichome.pyi
cr_trichome/source/: index.rst
docs/: requirements.txt
docs/source/: conf.py  documentation.rst  index.rst
docs/source/documentation/: _cr_trichome_rust.rst  analysis.rst  plotting.rst  simulation.rst  storage.rst
python/cr_trichome/: __init__.py  _cr_trichome_rust.pyi  asdf.py  plot.py
scripts/: run_sim.py
src/: cell_properties.rs  custom_domain.rs  lib.rs  main.rs  run_simulation.rs
