[package]
name = "cr_trichome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cr_trichome"
crate-type = ["cdylib"]

[dependencies]
# cellular_raza = { version = "0.0.12", features = ["pyo3", "timestamp"] }
pyo3 = "0.21.0"
