[package]
name = "cr_trichome"
version = "0.1.1"
edition = "2021"
include = ["docs/source/_static/cr_trichome*.svg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cr_trichome"
crate-type = ["cdylib"]

[dependencies]
cellular_raza = { version="0.4.0", features = ["pyo3", "timestamp"] }
num = { version = "0.4.3", features = ["rand", "serde"] }
pyo3 = "0.26"
rand = { version="0.9", features = ["small_rng"] }
rand_chacha = { version="0.9", features=["serde"] }
serde = "1.0"
tempdir = "0.3"
nalgebra = { version="0.34", features=["serde-serialize", "rand"]}
